# BIT10

./: .env.sample  .gitignore  README.md  drizzle.config.ts  global.d.ts  next.config.js  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  wagmi.config.ts
asset_storage/: Cargo.toml  README.md  dfx.json
asset_storage/brc20_asset_storage/: Cargo.toml  Makefile  canister_ids.json  dfx.json
asset_storage/bsc_asset_storage/: README.md
asset_storage/erc20_asset_storage/: Cargo.toml  canister_ids.json  dfx.json  package.json
asset_storage/eth_asset_storage/: Cargo.toml  README.md  package.json
asset_storage/icp_asset_storage/: Cargo.toml  README.md  canister_ids.json  dfx.json
asset_storage/solana_asset_storage/: Cargo.toml  dfx.json
asset_storage/sui_asset_storage/: Cargo.toml  README.md  dfx.json
asset_storage/trx_asset_storage/: Cargo.toml  README.md  dfx.json
drizzle/: 0000_daffy_kronos.sql  relations.ts  schema.ts
drizzle/meta/: 0000_snapshot.json  _journal.json
icp_canisters/ai_portfolio_manager/: Cargo.toml  README.md  dfx.json
icp_canisters/ai_portfolio_manager/src/ai_portfolio_manager_backend/: Cargo.toml  ai_portfolio_manager_backend.did
icp_canisters/ai_portfolio_manager/src/ai_portfolio_manager_backend/src/: lib.rs
icp_canisters/asset_storage/sui_asset_storage/src/sui_asset_storage_backend/: Cargo.toml  sui_asset_storage_backend.did
icp_canisters/asset_storage/sui_asset_storage/src/sui_asset_storage_backend/src/rpc/: mod.rs
icp_canisters/asset_storage/sui_asset_storage/src/sui_asset_storage_backend/src/service/: mod.rs
icp_canisters/asset_storage/sui_asset_storage/src/sui_asset_storage_backend/src/wallet/: mod.rs  sui_wallet.rs
icp_canisters/buy_bt10/: README.md  package-lock.json
icp_canisters/buy_bt10/mainnet_buy_bit10/src/exchange_canister_backend/: Cargo.toml  exchange_canister_backend.did
icp_canisters/buy_bt10/mainnet_buy_bit10/src/exchange_canister_backend/src/: base_wallet.rs  ecdsa.rs  lib.rs  state.rs
icp_canisters/buy_bt10/mainnet_buy_bit10/src/exchange_canister_backend/src/services/: bsc_rpc_service.rs  bsc_service.rs  bsc_transaction_service.rs  mod.rs  rpc_service.rs  solana_rpc_service.rs  solana_swap_service.rs  solana_transaction_service.rs  swap_service.rs  token_service.rs  trasaction_service.rs
icp_canisters/buy_bt10/mainnet_buy_bit10/src/exchange_canister_backend/src/state/: mod.rs  state.rs  storage.rs
icp_canisters/buy_bt10/mainnet_buy_bit10/src/exchange_canister_backend/src/types/: mod.rs  network.rs  swap.rs  token.rs
icp_canisters/buy_bt10/mainnet_buy_bit10/src/exchange_canister_backend/src/utils/: constants.rs  http.rs  mod.rs  tokens.rs  transactions.rs
icp_canisters/buy_bt10/mainnet_buy_bit10/src/exchange_canister_backend/src/wallet/: mod.rs  solana_wallet.rs
icp_canisters/dex/: Cargo.toml  README.md  dfx.json
icp_canisters/dex/mainnet_dex/src/mainnet_dex_backend/: Cargo.toml  mainnet_dex_backend.did
icp_canisters/dex/mainnet_dex/src/mainnet_dex_backend/src/: lib.rs
icp_canisters/dex/mainnet_dex/src/mainnet_dex_backend/src/services/: base_rpc_service.rs  base_transaction_service.rs  bsc_rpc_service.rs  bsc_transaction_service.rs  icp_swap_service.rs  icp_transaction_service.rs  mod.rs  solana_rpc_service.rs  solana_transaction_service.rs  token_service.rs
icp_canisters/dex/mainnet_dex/src/mainnet_dex_backend/src/state/: state.rs  storage.rs
icp_canisters/dex/mainnet_dex/src/mainnet_dex_backend/src/types/: mod.rs  network.rs  pool.rs  swap.rs  token.rs
icp_canisters/dex/mainnet_dex/src/mainnet_dex_backend/src/utils/: constants.rs  converters.rs  mod.rs  validators.rs
icp_canisters/dex/mainnet_dex/src/mainnet_dex_backend/src/wallet/: base_wallet.rs  bsc_wallet.rs  ecdsa.rs  ed25519.rs  mod.rs
liquidity_hub/icp/testnet_liquidity_hub/src/testnet_liquidity_hub_backend/: Cargo.toml  testnet_liquidity_hub_backend.did
liquidity_hub/icp/testnet_liquidity_hub/src/testnet_liquidity_hub_backend/src/modules/: ilp.rs  ilp_handler.rs  mod.rs  slp_handler.rs
liquidity_hub/icp/testnet_liquidity_hub/src/testnet_liquidity_hub_backend/src/services/: http.rs  mod.rs  verification.rs
liquidity_hub/testnet_liquidity_hub/: Cargo.toml  canister_ids.json
oracle/: Cargo.toml  Makefile  README.md  canister_ids.json  dfx.json  package.json
oracle/src/oracle_backend/: Cargo.toml  oracle_backend.did
oracle/src/oracle_backend/src/: lib.rs
server/: .gitignore  drizzle.config.ts  package-lock.json  package.json  tsconfig.json
server/drizzle/: 0000_amused_angel.sql  relations.ts  schema.ts
server/src/: server.ts  swagger.ts
sol_smart_contracts/buy_bit10/: Anchor.toml
src/: env.js  i18n.ts  middleware.ts
src/actions/: dbActions.ts
src/app/: globals.css  layout.tsx  page.tsx  robots.ts
src/components/: Footer.tsx  GoogleAnalytics.tsx  Header.tsx  InformationCard.tsx  MaxWidthWrapper.tsx  ModeToggle.tsx  Navbar.tsx  ResponsiveNavbar.tsx  ScrollToTop.tsx  ScrollToTopBtn.tsx  WalletBtn.tsx  theme-provider.tsx
src/context/: BSCWalletContext.tsx  BTCWalletContext.tsx  ChainContext.tsx  ETHWalletContext.tsx  EVMWalletContext.tsx  ICPWalletContext.tsx  PrivySwapProgramContextProvider.tsx  SOLSwapProgramContextProvider.tsx  SOLWalletContext.tsx  UnisatWalletContext.tsx  WalletContext.tsx  Web3ModalContext.tsx
src/data/: bit10TokenAllocation.tsx  globe.json  performanceData.tsx
src/db/: db.ts  relations.ts  schema.ts
src/drizzle/: 0000_handy_sunfire.sql  0000_stale_lester.sql  relations.ts  schema.ts
src/emails/: BIT10.BTCApprove.tsx  BIT10.BTCRequest.tsx  BIT10.DEFIRequest.tsx  BIT10ContactUs.tsx  BIT10Request.tsx  ICPInterview.tsx  Review.tsx  Welcome.tsx
src/hooks/: useLocalStorage.tsx
src/i18n/: request.ts
src/lib/: ai_portfolio_manager.js  api.ts  bit10.did.js  bit10_btc.did.js  buy.did.js  ckbtc_leger_canister.did.js  constants.ts  dex.did.js  erc20Abi.ts  faucet.did.js  (+9 more)
web_app/: .gitignore  components.json  drizzle.config.ts  global.d.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  wagmi.config.ts
(+812 files in other folders)
