[package]
name = "ai_portfolio_manager_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.18"
ic-cdk-timers = "0.12" # Feel free to remove this dependency if you don't need timers
ic-ledger-types = "0.14.0"
ic-llm = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
