[package]
name = "mainnet_dex_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.17"
ic-cdk-timers = "0.11" # Feel free to remove this dependency if you don't need timers

alloy-consensus = "0.1.3"
alloy-eips = "0.1.3"
alloy-primitives = "0.7.6"
evm-rpc-canister-types = "0.1.2"
# transitive dependency: ic-crypto-ecdsa-secp256k1 -> k256 -> ecdsa -> elliptic-curve -> crypto-bigint -> rand_core -> getrandom
# See https://forum.dfinity.org/t/module-imports-function-wbindgen-describe-from-wbindgen-placeholder-that-is-not-exported-by-the-runtime/11545/8
getrandom = { version = "*", default-features = false, features = ["custom"] }
ic-secp256k1 = { git = "https://github.com/dfinity/ic", tag = "release-2025-07-03_03-27-base", package = "ic-secp256k1" }
ic-sha3 = { git = "https://github.com/dfinity/ic", tag = "release-2025-07-03_03-27-base", package = "ic-sha3" }
ic-ethereum-types = { git = "https://github.com/dfinity/ic", tag = "release-2025-07-03_03-27-base", package = "ic-ethereum-types" }
serde = "1.0"
serde_json = "1.0"
serde_bytes = "0.11.15"
num-traits = "0.2.19"
num = "0.4.3"
sha2 = "0.10.9"
hmac = "0.12.1"
rust_decimal = "1.37.2"
rust_decimal_macros = "1.37.1"
alloy-sol-types = "0.7.2"
ciborium = "0.2.2"
ic-stable-structures = "0.5.5"
icrc-ledger-types = "0.1.5"

bs58 = "0.5.1"
ic-ed25519 = "0.3.0"
sol_rpc_client = { version = "3.0.0", features = ["ed25519"] }
sol_rpc_types = { version = "3.0.0" }
solana-hash = "3.0.0"
solana-instruction = "3.0.0"
solana-message = "3.0.1"
solana-pubkey = { version = "3.0.0", features = ["curve25519"] }
solana-signature = "3.1.0"
solana-system-interface = { version = "2.0.0", features = ["bincode"] }
solana-transaction = { version = "3.0.1", features = ["bincode"] }
spl-associated-token-account-interface = "2.0.0"
bincode = "1.3"

base64 = "0.21"

[dev-dependencies]
candid = "0.10"
candid_parser = "0.2.2"
ic-management-canister-types = "0.4.1"
# ic-test-utilities-load-wasm = { workspace = true }
pocket-ic = "10.0.0"
solana-client = "3.0.5"
solana-commitment-config = "3.0.0"
solana-keypair = "3.0.1"
solana-program = "3.0.0"
solana-rpc-client-nonce-utils = "3.0.5"
solana-signer = "3.0.0"
