[package]
name = "testnet_liquidity_hub_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.12"
tokio = { version = "1.0", features = ["rt", "time"] }
ic-cdk-timers = "0.6" # Feel free to remove this dependency if you don't need timers
# ic-cdk-macros = "0.10"
# std = { version = "0.10", features = ["collections"] }
ic-stable-structures = "0.5.5"
icrc-ledger-types = "0.1.5"
serde = "1.0.197"
serde_derive = "1.0.197"
num-traits = "0.2"
dotenv = "0.15.0"
serde_json = "1.0.93"
serde_bytes = "0.11.9"
num-bigint = "0.4"
ciborium = "0.2.0"
urlencoding = "2.1.0"